# RPIPicoWWeatherForecastTFT

./: .gitmodules  CMakeLists.txt  PicoW_WSClient.cmake  README.md  coreHTTP.cmake  wolfssl_import.cmake
port/FreeRTOS-Kernel/: FreeRTOSConfig.h
port/coreHTTP/: core_http_config.h
port/lwip/: lwipopts.h  lwippools.h
port/wolfssl/: config.h  myMemory.c  myTime.c  user_settings.h
py/: ipgeo.py  tlsVer.py  weather.py
src/: CMakeLists.txt  ColorUtils.cpp  ColorUtils.h  Ili9341.cpp  Ili9341.h  Location.cpp  Location.h  PubSansBlack.c  PubSansBlack.h  Weather.cpp  Weather.h  main.cpp
